--- a/src/components/cardList/table.html.mustache
+++ b/src/components/cardList/table.html.mustache
@@ -3,8 +3,8 @@
     <div class="-mt-2 -ml-2 flex flex-wrap items-center">
       <span class="table-title-text">{{title}}</span>
       {{^srch}}
-      <div class="mx-3 mt-3" title="デッキ情報">
-        <button type="button" id="button-deck-info" class="button button-sm button-default">
+      <div class="mx-3 mt-3">
+        <button type="button" id="button-deck-info" class="button button-sm button-default" title="デッキ情報">
           <i class="fa fa-circle-info w-3"></i>
         </button>
       </div>
